tests/machine/x/c/order_by_map.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/order_by_map.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/order_by_map.c:98:20: error: invalid operands to binary > (have ‘map_string_int’ and ‘map_string_int’)
   98 |       if (tmp5[i9] > tmp5[i10]) {
      |           ~~~~~~~~ ^ ~~~~~~~~~
      |               |          |
      |               |          map_string_int
      |               map_string_int

   1: // Generated by Mochi compiler v0.10.24 on 2025-07-13T03:59:17Z
